--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
               <li class="cs-li">
                 <a href="#about" class="cs-li-link"> About </a>
               </li>
-              <li class="cs-li">
-                <a href="#roadmap" class="cs-li-link"> Roadmap </a>
-              </li>
             </ul>
           </div>
         </nav>
@@ -168,7 +165,7 @@
             <h3>Burnt<br />Liquidity</h3>
           </div>
           <div class="toke-box">
-            <h3>1B<br />Total Supply</h3>
+            <h3>21M supply<br />Total Supply</h3>
           </div>
         </div>
       </section>
@@ -206,7 +203,7 @@
 
       <section id="roadmap">
         <h2>
-          Roadmap
+          How the Virus Spread
           <picture>
             <source />
             <img
@@ -218,16 +215,43 @@
         </h2>
         <div class="section-full">
           <div class="road-box">
-            <h3>PHASE 1</h3>
-            <h4>MEME</h4>
+            <h3>🧼 Clean Wallets Are Immune.</h3>
+
+            <p>
+              • You can buy INFECT on Raydium, but without infection, your
+              wallet resists the virus.
+            </p>
+            <p>
+              • The immune system kicks in. You’re hard-capped at 10 INFECT max.
+            </p>
           </div>
           <div class="road-box">
-            <h3>PHASE 2</h3>
-            <h4>VIBE AND HODL</h4>
+            <h3>🧫 Infection by Contact:</h3>
+
+            <p>• Someone sends you INFECT → you’re infected.</p>
+            <p>• One tiny viral dose (even 0.0001 INFECT) flips the switch.</p>
+            <p>• Now you’re fully contagious—a host for the virus.</p>
           </div>
           <div class="road-box">
-            <h3>PHASE 3</h3>
-            <h4>MEME TAKEOVER</h4>
+            <h3>🙅 You Can’t Infect Yourself:</h3>
+            <p>• Trying to send INFECT to your own wallet?</p>
+            <p>• Nice try. The virus knows. Self-sending doesn’t count.</p>
+            <p>
+              • Only infections from other hosts (different wallets) spread the
+              fever.
+            </p>
+          </div>
+          <div class="road-box">
+            <h3>🦠 Fever Unleashed:</h3>
+            <p>• Infected wallets are unshackled.</p>
+            <p>• Buy, stack, and trade unlimited INFECT on Raydium.</p>
+            <p>• Once you’re contagious, there’s no stopping the viral load.</p>
+          </div>
+          <div class="road-box">
+            <h3>🔁 Spread the Plague:</h3>
+            <p>• Send INFECT to your friends.</p>
+            <p>• Each transfer = a new host.</p>
+            <p>• Coinfection becomes an epidemic. And you’re Patient Zero.</p>
           </div>
         </div>
       </section>
