--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
           <div class="intro-btn">
             <div class="btn">
               <a
-                href="https://pump.fun/coin/xxxxxxxxxxxxxxxxxxxx"
+                href="buylink"
                 target="_blank"
                 style="text-transform: uppercase"
-                >pump fun</a
+                >Buy Now</a
               ><img
                 src="img/buy-icon.png"
                 alt="logo"
